--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         </tbody>
                     </table>
                 </div>
-                <button class="btn" onclick="alert('Funcionalidade de exportação a ser implementada.')">Exportar para as Planilhas</button>
+                <!-- BOTÃO REMOVIDO DAQUI -->
             </div>
         </section>
 
@@ -357,14 +357,23 @@
                                 <td>O sistema deve permitir anexar cotações (PDFs, e-mails) à requisição e, idealmente, comparar automaticamente os orçamentos. A decisão deve focar em custo-benefício (qualidade, prazo, sazonalidade), não só preço.</td>
                                 <td>ERP (Módulo de Cotação)</td>
                             </tr>
+                            <!-- NOVA ETAPA ADICIONADA -->
                             <tr>
                                 <td>2.2</td>
+                                <td>Curadoria Especializada</td>
+                                <td>Para itens estratégicos (ex: Decoração, Linha Premium), a cotação pré-aprovada passa pela validação de um especialista (Curador/Sócio) para garantir alinhamento com tendências, design e qualidade percebida.</td>
+                                <td>ERP (Workflow de Aprovação) + BI</td>
+                            </tr>
+                            <tr>
+                                <!-- ETAPA RENUMERADA DE 2.2 PARA 2.3 -->
+                                <td>2.3</td>
                                 <td>Geração Automatizada de Pedido</td>
-                                <td>Ao aprovar a cotação, o sistema gera o Pedido de Compra (PO) interno automaticamente.</td>
+                                <td>Ao aprovar a cotação e a curadoria, o sistema gera o Pedido de Compra (PO) interno automaticamente.</td>
                                 <td>ERP (Módulo de Compras)</td>
                             </tr>
                             <tr>
-                                <td>2.3</td>
+                                <!-- ETAPA RENUMERADA DE 2.3 PARA 2.4 -->
+                                <td>2.4</td>
                                 <td>"Rodagem" de Custos (Seiketsu)</td>
                                 <td>O processo de "rodagem" (cálculo de IPI, Custo Interno, aplicação do markup/índice de venda) deve ser totalmente automatizado pelo sistema no momento da geração do PO.</td>
                                 <td>ERP (Config. Financeira/Fiscal)</td>
@@ -372,7 +381,7 @@
                         </tbody>
                     </table>
                 </div>
-                <button class="btn" onclick="alert('Funcionalidade de exportação a ser implementada.')">Exportar para as Planilhas</button>
+                <!-- BOTÃO REMOVIDO DAQUI -->
             </div>
         </section>
 
@@ -421,7 +430,7 @@
                         </tbody>
                     </table>
                 </div>
-                <button class="btn" onclick="alert('Funcionalidade de exportação a ser implementada.')">Exportar para as Planilhas</button>
+                <!-- BOTÃO REMOVIDO DAQUI -->
             </div>
         </section>
         
@@ -484,7 +493,7 @@
                         </tbody>
                     </table>
                 </div>
-                <button class="btn" onclick="alert('Funcionalidade de exportação a ser implementada.')">Exportar para as Planilhas</button>
+                <!-- BOTÃO REMOVIDO DAQUI -->
             </div>
         </section>
 
