--- a/index.html
+++ b/index.html
@@ -508,12 +508,12 @@
     </main>
 
     <!-- Rodapé (Guia de Estilo - Proposta) -->
-    <footer>
+    <!-- <footer>
         <img src="https://raw.githubusercontent.com/Clebito2/layout/main/Logo%20live%20oficial-34.png" 
              alt="Logo Live Consultoria" class="footer-logo" loading="lazy">
         <p style="color: var(--text-primary); font-weight: 600;">Live Consultoria Empresarial</p>
         <p style="color: var(--text-subtle); font-size: 0.9rem;">Reestruturação Estratégica | Projeto Casas Goianita</p>
-    </footer>
+    </footer> -->
 
     <!-- Script para Animação (Obrigatório pelo Guia de Estilo V2) -->
     <script>
